--- a/hours.html
+++ b/hours.html
@@ -2,47 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Hours</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LTS Hours</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <script src="js/main.js" defer></script>
 </head>
 
 <body>
-    <h1>Little Taco Shop Hours</h1>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/#about">About LTS</a></li>
-                <li><a href="/#menu">Our Menu</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-
-        <figure>
-            <img src="/img/tacos_tray_400x267.png" alt="Tacos Tray" title="Tacos on tray.">
-            <figcaption>A Tray of Tasty Tacos</figcaption>
-        </figure>
-    </header>
-    <hr>
-    <main>
-        <p>We are open 7 days a week!</p>
-        <dl>
-            <dt>Sunday - Thursday</dt><br>
-            <dd>11am - 9pm</dd><br>
-            <dt>Friday - Saturday</dt><br>
-            <dd>11am - 11pm</dd>
-        </dl>
-        <p><a href="#">Back to Top</a></p>
-        
-    </main>
-    </main>
-    <hr>
-    <footer>
-        <p>Copyright &COPY; The Little Taco Shop</p>
-    </footer>
+  <header class="header">
+    <h1 class="header-h1">Little Taco Shop</h1>
+    <nav class="header-nav">
+      <ul class="header-ul">
+        <li><a href="/">Home</a></li>
+        <li><a href="/#menu">Menu</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About LTS</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="hero">
+    <figure>
+      <img src="/img/tacos_tray_400x267.png" alt="Tacos Tray" title="Tacos on tray." width="1000" height="667">
+      <figcaption class="offscreen">A Tray of Tasty Tacos</figcaption>
+    </figure>
+  </section>
+  <hr>
+  <main class="main">
+    <h2>Hours</h2>
+    <article class="main-article">
+      <p>We are open 7 days a week!</p><br>
+      <dl>
+        <dt>Sunday - Thursday</dt>
+        <dd>11am - 9pm</dd>
+        <dt>Friday - Saturday</dt>
+        <dd>11am - 11pm</dd>
+      </dl>
+    </article>
+  </main>
+  <hr>
+  <footer class="footer">
+    <p>
+      <span class="nowrap">Copyright &copy; <time id="year"></time></span>
+      <span class="nowrap">Little Taco Shop</span>
+    </p>
+  </footer>
 </body>
 
 </html>
