--- a/contact.html
+++ b/contact.html
@@ -2,69 +2,75 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <script src="js/main.js" defer></script>
 </head>
 
 <body>
-    <h1>Contact Us</h1>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/#about">About LTS</a></li>
-                <li><a href="/#menu">Our Menu</a></li>
-                <li><a href="hours.html">Store Hours</a></li>
-            </ul>
-        </nav>
-        <figure>
-            <img src="img/tacos_close_up_400x260.png" alt="Tasty tacos" title="mmmm Yummy">
-            <figcaption>Little Taco Shop Tacos</figcaption>
-        </figure>
-    </header>
-    <main>
-        <section>
-            <h2>Our Contact Form</h2>
-            <fieldset>
-                <form action="https://httpbin.org/get" method="get">
-                    <legend>Send Us a Message</legend>
-                    <p>
-                        <label for="name">Name:</label>
-                        <input type="text" name="name" id="name" placeholder="your name" required>
-                    </p>
-                    <p>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" placeholder="your email" id="email" required>
-                    </p>
-                    <p>
-                        <label for="message">Your Message</label>
-                        <br>
-                        <textarea name="message" id="message" cols="30" rows="10"
-                            placeholder="Type your message here"></textarea>
-                    </p>
-            </fieldset>
-            <button type="submit">Send</button>
-            <button type="reset">Reset</button>
-            </form>
-        </section>
-        <section>
-            <h2>Our Location</h2>
+  <header class="header">
+    <h1 class="header-h1">Litle Taco Shop</h1>
+    <nav class="header-nav">
+      <ul class="header-ul">
+        <li><a href="/">Home</a></li>
+        <li><a href="/#menu">Menu</a></li>
+        <li><a href="hours.html">Hours</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <figure>
+      <img src="img/tacos_close_up_400x260.png" alt="Tasty tacos" title="mmmm Yummy" width="1000" height="667">
+      <figcaption class="offscreen">Little Taco Shop Tacos</figcaption>
+    </figure>
+  </section>
 
-            <address>
-                <p>
-                    555 Taco Temptation Lane, Suite T <br>
-                    Kansas CIty, MO 55555-5555</p>
-                <p>Phone: <a href="tel:+5555555555">555-555-55555</a></p>
-            </address>
-        </section>
-        <p><a href="#">Back to Top</a></p>
-    </main>
-    <footer>
-        <p>Copyright &COPY; The Little Taco Shop</p>
-    </footer>
+  <main class="main">
+    <article class="main-article">
+      <h2>Our Location</h2>
+      <address>
+        <p>
+          555 Taco Temptation Lane, Suite T <br>
+          Kansas CIty, MO 55555-5555</p>
+        <p>Phone: <a href="tel:+5555555555">555-555-55555</a></p>
+      </address>
+    </article>
+    <hr>
+    <article class="main-article contact">
+      <h2 class="contact-h2">Our Contact Form</h2>
+      <form action="https://httpbin.org/get" method="get" class="contact-form">
+        <fieldset class="contact-fieldset">
+          <legend class="offscreen">Send Us a Message</legend>
+            <p class="contact-p">
+              <label class="contact-label" for="name">Name:</label>
+              <input class="contact-input" type="text" name="name" id="name" placeholder="your name" required>
+            </p>
+            <p class="contact-p">
+              <label class="contact-label" for="email">Email:</label>
+              <input class="contact-input" type="email" name="email" placeholder="your email" id="email" required>
+            </p>
+            <p class="contact-p">
+              <label class="contact-label" for="message">Your Message</label>
+              <br>
+              <textarea class="contact-textarea" name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+            </p>
+        </fieldset>
+      <button class="contact-button" type="submit">Send</button>
+      <button class="contact-button" type="reset">Reset</button>
+      </form>
+    </article>
+  </main>
+
+  <footer class="footer">
+    <p>
+      <span class="nowrap">Copyright &copy; <time id="year"></time></span>
+      <span class="nowrap">Little Taco Shop</span>
+    </p>
+  </footer>
 </body>
 
 </html>
